--- a/docs/src/adrs/adr-002.md
+++ b/docs/src/adrs/adr-002.md
@@ -1,9 +1,8 @@
-# ADR-XXX: ADR title
+# ADR-002: Microservice to manage the invitations for card type
 
-- ***Status***: *{ PROPOSED | REJECTED | ACCEPTED | PENDING | DECIDED | APPROVED | DEPRECATED }*
-- ***Deciders***: *Lists everyone involved in the decision.*
-- ***Consulted***: *Lists everyone whose opinions are sought and with whom there is a two-way communication.*
-- ***Informers***: *Lists everyone who is kept up-to-date on progress in one-way communication.*
+- ***Status***:  ACCEPTED
+- ***Deciders***: Jack Toporco, José Salcedo
+- ***Consulted***: Carlos Ruiz
 
 ## Decision timeline *(MANDATORY)*
 
@@ -11,60 +10,33 @@
 
 |                                         |            |
 | --------------------------------------- | ---------- |
-| Submitted on                            | 2022-07-01 |
-| Submit your comments and suggestions by | 2022-07-14 |
-| Decision will be made on                | 2022-07-21 |
+| Submitted on                            | 2025-09-15 |
 
 ## Context *(MANDATORY)*
 
-- *Describes the context and problem statement in a few sentences.*
-- *Links to collaboration boards or issue management systems can go here too.*
-
-### Assumptions *(MANDATORY)*
-
-- *Asusumptions list if it applies.*
-
-### Constraints *(OPTIONAL)*
-
-- *Constraints list if it applies.*
+- Get the information about the invitations related to an Iberia Card type.
+- The system that should manage this information is IAGL system that is responsible to manage loyalty system in IBERIA.
+- At the moment of writing this ADR IAGL doesn't have this information.
 
 ### Functional Requirements *(OPTINAL)*
 
-- *Functional Requirements list if it applies.*
-
-### Non-Functional Requirements *(OPTIONAL)*
-
-- *Non-Functional Requirement lists if it applies.*
+- To manage the invitations to fastTrack and lounges it is required to know the number of invitations associated to a Iberia card type.
 
 ## Decision *(MANDATORY)*
 
-- *What is the change that we're proposing and/or doing?*
+- Develop a tactical internal microservice that manage the number of invitations associated a Iberia card type.
+- Once IAGL has this information then it is mandatory to refactor de service to go against IAGL endpoints.
 
 ### Justification *(MANDATORY)*
 
-- *Reasoning justification and Agreements taken.*
-- *Trade-offs taken into consideration.*
+- We can't depend on IAGL endpoints for this development.
 
 ### Risks *(OPTIONAL)*
 
-- *Risks list if it applies.*
-
-### Alternatives Considered *(OPTIONAL)*
-
-- *If it applies each alternative MUST be described including*
-  - *Reasoning Process*
-  - *Assumptions*
-  - *Constraints*
-  - *Limitations*
-  - *Pros and Cons*
-  
-## Consequences *(OPTIONAL)*
-
-*What becomes easier or more difficult to do because of this change ?*
-
-- *Positive*
-  - *item*
-- *Negative*
-  - *item*
+- The main risk is that IAGL never develops this funcionality.
+- When IAGL is ready, we don't refactor the code because we don't have resources.
 
 ## Conclusion *(MANDATORY)*
+
+- Developing this simple microservice allows CX have the functionality of VIP Lounges in time.
+- The code should be dessigned to Refactor the code easily to IAGL endpoints.
