--- a/docs/src/adrs/adr-002.md
+++ b/docs/src/adrs/adr-002.md
@@ -1,4 +1,4 @@
-# ADR-002: Microservice to manage the invitations for card type
+# ADR-002: Microservice to manage Invitations for Card Type
 
 - ***Status***:  ACCEPTED
 - ***Deciders***: Jack Toporco, José Salcedo
@@ -14,29 +14,30 @@
 
 ## Context *(MANDATORY)*
 
-- Get the information about the invitations related to an Iberia Card type.
-- The system that should manage this information is IAGL system that is responsible to manage loyalty system in IBERIA.
-- At the moment of writing this ADR IAGL doesn't have this information.
+- The goal is to manage information related to invitations associated with an Iberia card type.
+- The system responsible for managing this information is the IAGL system, which handles the loyalty program for Iberia.
+- At the time of writing this ADR, IAGL doesn't yet provide this information.
 
 ### Functional Requirements *(OPTINAL)*
 
-- To manage the invitations to fastTrack and lounges it is required to know the number of invitations associated to a Iberia card type.
+- To manage the invitations to fastTrack and lounges it is required to know the number of invitations associated with a specific Iberia card type.
 
 ## Decision *(MANDATORY)*
 
-- Develop a tactical internal microservice that manage the number of invitations associated a Iberia card type.
-- Once IAGL has this information then it is mandatory to refactor de service to go against IAGL endpoints.
+- Develop a tactical internal microservice to manage the number of invitations associated with Iberia card type.
+- The microservice will be deployed in CX account and the database will be managed by CX until IAGL provides the required functionality.
+- Once IAGL has this information then it will be mandatory to refactor de service to consume IAGL endpoints.
 
 ### Justification *(MANDATORY)*
 
-- We can't depend on IAGL endpoints for this development.
+- We can't depend on IAGL endpoints for this development at this time.
 
 ### Risks *(OPTIONAL)*
 
 - The main risk is that IAGL never develops this funcionality.
-- When IAGL is ready, we don't refactor the code because we don't have resources.
+- When IAGL is ready, we may lack the resources to refactor the code accordingly.
 
 ## Conclusion *(MANDATORY)*
 
-- Developing this simple microservice allows CX have the functionality of VIP Lounges in time.
-- The code should be dessigned to Refactor the code easily to IAGL endpoints.
+- Developing this simple microservice enables CX to deliver VIP Invitations on time.
+- The code should be dessigned to allow easy refactoring to integrate IAGL endpoints in the future.
