--- a/docs/src/adrs/adr-001.md
+++ b/docs/src/adrs/adr-001.md
@@ -2,7 +2,7 @@
 
 - ***Status***:  ACCEPTED 
 - ***Deciders***: José Salcedo
-- ***Consulted***: 
+- ***Consulted***: Ildefonso Serrano
 - ***Informers***: 
 
 ## Decision timeline *(MANDATORY)*
@@ -15,22 +15,78 @@
 
 ## Context *(MANDATORY)*
 
-For Invitations manager is required to send a email containing a QR that will allow to the invited person to entry the lounge of fastTrack system. 
+For Invitations manager is required to send an email containing a QR that will allow to the invited person to entry the lounge of fastTrack system. 
+
+
 
 
 ### Functional Requirements *(OPTINAL)*
 
-- The QR is embedded in the HTML.
+- The QR is embedded in the email (HTML),  it is not attacked.
 - The code can be sent months before the fllght, it shouldn't caducate.
 
 
 ### Non-Functional Requirements *(OPTIONAL)*
 
-- The code must be generated in Invitations systems because CRM Cloud only manage generic files.
+- The imnage of QR must be generated in Invitations systems because CRM Cloud only manage generic files.
 
 ## Decision *(MANDATORY)*
 
-- Invitations manager will  generate a image of QR Code and save in private S3 bucket
-- Invitation manager will generate a signed link with caducity and will send to CRM system
-- The CRM System has to include the image embedded in the email (link is not valid, because caducity)
+- Invitations manager will  generate a image of QR Code and will save it in private S3 bucket.
+- Invitation manager will generate a signed link with caducity and will send to CRM system.
+- The CRM System has to include the image embedded in the email (link is not valid, because of caducity).
+
+## Additional considerations
+- It is recommended to do in this way because:
+    - The caducity of the link.
+    - Security, it is better not to expose this QR to public internet.
+
+
+## Related
+In the meetings involving MKT Cloud and CRM Cloud to speak about how to send the message to MKT Cloud it was agreed that the QR image included in the email it would be embedded as Base64 text instead of a link to s3 bucket (because of caducity and security).
+
+
+## Evidences
+Conversation CX & Mkt cloud:
+People involved:
+
+COFO.Salcedo Rojas, José
+BABEL.Azaña Alonso, José
+cocktail.Correa Caicedo, Laura Johanna
+cocktail.Molina Miguel, David
+COFO.Cilleruelo Tr
+glo.Muscalu, Daniel
+glo.Pina Barrios, Sara Margoth
+Ibargüen Ribera, María Cristina
+LEDA.Pina Gutierrez, Lisbeth Andreina
+Ruf, Andreas Franz
+Serrano Garcia, Idelfonso
+vector.Álvarez Canon, David
+viseo.Ayala Leandro, Carlos
+
+
+Detailed conversation:
+
+COFO.Salcedo Rojas, José
+
+El problema es la expiración de la URL
+ 
+eso es, la invitación puede hacerse días o hasta meses antes del vuelo, y la expiración es limitada. Por eso la importancia de embeder la imagen y no utilizar la URL en el correo.
+ 
+cocktail.Molina Miguel, David
+
+pero eso, como os dije no sería problema. 
+Si yo os envio un email hoy con una imagen del qr usando la URL de s3 que me ha compartido David
+
+aunque caduque la imagen del s3, en ese correo vais a ver la imagen para siempre, porque se pinta solo cuando se envia, no se vuelve a cargar cada vez que entras a ver el correo
+ 
+no se si me he explicado bien
+ 
+COFO.Salcedo Rojas, José
+
+perfecto entonces, no te había entendido bien
+ 
+
+
+
 
