--- a/docs/src/adrs/adr-001.md
+++ b/docs/src/adrs/adr-001.md
@@ -3,7 +3,7 @@
 - ***Status***:  ACCEPTED 
 - ***Deciders***: José Salcedo
 - ***Consulted***: Ildefonso Serrano
-- ***Informers***: 
+- ***Informers***: Francisco Cilleruela
 
 ## Decision timeline *(MANDATORY)*
 
@@ -41,6 +41,15 @@ The Invitations manager requires the ability to send an email containing a QR th
     - The expiration  of the signed link.
     - Security concerns , it is preferable not to expose the QR code image to the public internet.
 
+
+## Example 
+The generated HTML should be something like this:
+<body>
+    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA
+    AAAFCAYAAACNbyblAAAAHElEQVQI12P4
+    //8/w38GIAXDIBKE0DHxgljNBAAO
+    9TXL0Y4OHwAAAABJRU5ErkJggg==">
+</body>
 
 ## Related
 In meetings involving MKT Cloud and CRM Cloud regarding how to send the message to MKT Cloud it was agreed that the QR code image included in the email should be embedded as Base64 text instead of using a link to s3 bucket (due to expiration and security concerns).
