--- a/docs/src/adrs/adr-004.md
+++ b/docs/src/adrs/adr-004.md
@@ -15,7 +15,7 @@
 
 ## Context *(MANDATORY)*
 
-- The  VIP lounges invitations initiative requires two functionalities related with CRM:
+- The VIP lounges invitations initiative requires two functionalities related with CRM:
     - Output: Send email to VIP and/or guest.
     - Inbound: Receive a call from SalesForce to redeem the QR Code.
 
@@ -35,6 +35,6 @@ It has been defined that all the communications with SalesForce must go through 
 
 - The Invitations Manager initiative has a deadline of October 2025, and CRM Cloud is not yet ready.
 
-- It is important to migrate de communication to CRM Cloud initiative when it becomes available.
+- It is important to migrate the communication to CRM Cloud initiative when it becomes available.
 
 
